<resources>
    <string name="app_name">Recipes</string>

    <string name="button_start_cook">Начать</string>
    <string name="ingredients_title">Ингредиенты</string>
    <string name="kitchen">Кухня:</string>
    <string name="cook_time">Время приготовления:</string>
    <string name="Kcal">Ккал</string>
    <string name="squirrels">Белки</string>
    <string name="grease">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="favorite">Любимые</string>
    <string name="categories">Категории</string>
    <string name="kitchens">Кухня</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kitchen_title">Кухня</string>
    <string name="tasties">Вкусы</string>
</resources>
