<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/kitchenIcon">

    <TextView
        android:id="@+id/energyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorBlack"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/carbohydrates_value"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/kcal_value"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Готового блюда" />

<TextView
    android:id="@+id/kcal_value"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginTop="10dp"
    android:textSize="10sp"
    android:background="@drawable/circle_textview_primary"
    android:gravity="center"
    app:layout_constraintTop_toBottomOf="@+id/energyTitle"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/squirrels_value"
    android:text="1811.2\nккал"/>

<TextView
    android:id="@+id/kcal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:textSize="10sp"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="@+id/kcal_value"
    app:layout_constraintEnd_toEndOf="@+id/kcal_value"
    app:layout_constraintTop_toBottomOf="@+id/kcal_value"
    android:text="@string/Kcal"/>

<TextView
    android:id="@+id/squirrels_value"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:background="@drawable/circle_textview_primary"
    android:gravity="center"
    android:text="93.4 г"
    android:textSize="10sp"
    app:layout_constraintEnd_toStartOf="@+id/grease_value"
    app:layout_constraintStart_toEndOf="@+id/kcal_value"
    app:layout_constraintTop_toTopOf="@+id/kcal_value" />

<TextView
    android:id="@+id/squirrels"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:textSize="10sp"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="@+id/squirrels_value"
    app:layout_constraintEnd_toEndOf="@+id/squirrels_value"
    app:layout_constraintTop_toBottomOf="@+id/squirrels_value"
    android:text="@string/squirrels"/>

<TextView
    android:id="@+id/grease_value"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:background="@drawable/circle_textview_primary"
    android:gravity="center"
    android:text="57.8 г"
    android:textSize="10sp"
    app:layout_constraintEnd_toStartOf="@+id/carbohydrates_value"
    app:layout_constraintBottom_toBottomOf="@+id/squirrels_value"
    app:layout_constraintStart_toEndOf="@+id/squirrels_value"
    app:layout_constraintTop_toTopOf="@+id/squirrels_value" />

<TextView
    android:id="@+id/grease"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:textSize="10sp"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="@+id/grease_value"
    app:layout_constraintEnd_toEndOf="@+id/grease_value"
    app:layout_constraintTop_toBottomOf="@+id/grease_value"
    android:text="@string/grease"/>

<TextView
    android:id="@+id/carbohydrates_value"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:background="@drawable/circle_textview_primary"
    android:gravity="center"
    android:textSize="10sp"
    tools:text="57.8 г"
    app:layout_constraintBottom_toBottomOf="@+id/grease_value"
    app:layout_constraintStart_toEndOf="@+id/grease_value"
    app:layout_constraintTop_toTopOf="@+id/grease_value"
    app:layout_constraintEnd_toEndOf="parent"/>

<TextView
    android:id="@+id/carbohydrates"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:textSize="10sp"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="@+id/carbohydrates_value"
    app:layout_constraintEnd_toEndOf="@+id/carbohydrates_value"
    app:layout_constraintTop_toBottomOf="@+id/carbohydrates_value"
    android:text="@string/carbohydrates"/>


</androidx.constraintlayout.widget.ConstraintLayout>